--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.23",
     "@types/react-redux": "^7.1.33",
     "@types/redux": "^3.6.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
