--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "test",
   "version": "0.1.0",
+  "proxy": "http://localhost:5004",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
