--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
     "@types/react-redux": "^7.1.33",
+    "@types/react-router-bootstrap": "^0.26.6",
+    "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -21,8 +23,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
